--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "moment": "^2.15.2",
     "normalize.css": "^5.0.0",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3",
